API swagger spec regenerated.
